unpackaged/main/default/objects/FSL_RAP_Matrix__c/FSL_RAP_Matrix__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Details of the various RAP programs supported by AAA</description>
    <label>FSL RAP Matrix</label>
</CustomObject>