unpackaged/main/default/objects/FSL_RAP_Matrix__c/fields/Max_Odometer__c.field-meta.xml
<CustomField>
    <fullName>Max_Odometer__c</fullName>
    <description>Maximum mileage that is covered by the program</description>
    <inlineHelpText>Maximum mileage covered by the program</inlineHelpText>
    <label>Max Odometer</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>