unpackaged/main/default/objects/FSL_RAP_Matrix__c/fields/Odometer_Required__c.field-meta.xml
<CustomField>
    <fullName>Odometer_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the odometer maximum mileage requires validation</description>
    <label>Odometer Required</label>
    <type>Checkbox</type>
</CustomField>