unpackaged/main/default/objects/FSL_RAP_Matrix__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Phone Number to reach RAP call center</description>
    <inlineHelpText>RAP Call Center Phone Number</inlineHelpText>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>