unpackaged/main/default/objects/FSL_RAP_Matrix__c/fields/Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Code__c</fullName>
    <description>3 digit program code that uniquely identifies the program</description>
    <externalId>true</externalId>
    <inlineHelpText>3 digit program code that uniquely identifies the program</inlineHelpText>
    <label>Program Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>