unpackaged/main/default/objects/FSL_RAP_Matrix__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <description>Type of RAP program; OEM/Rental/Wireless</description>
    <inlineHelpText>OEM/Rental/Wireless</inlineHelpText>
    <label>Program Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>