unpackaged/main/default/objects/FSL_RAP_Matrix__c/fields/VIN_Required__c.field-meta.xml
<CustomField>
    <fullName>VIN_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked if the program requires VIN validation</description>
    <label>VIN Required</label>
    <type>Checkbox</type>
</CustomField>