unpackaged/main/default/objects/FSL_RAP_Matrix__c/listViews/RAP_Matrix.listView-meta.xml
<ListView>
    <fullName>RAP_Matrix</fullName>
    <columns>NAME</columns>
    <columns>Program_Name__c</columns>
    <columns>Program_Code__c</columns>
    <columns>Program_Type__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>VIN_Required__c</columns>
    <columns>Odometer_Required__c</columns>
    <columns>Max_Odometer__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>RAP Matrix</label>
    <language>en_US</language>
</ListView>